--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2021"
 
 [dependencies]
 multiversion = "0.7"
+
+[dev-dependencies]
+criterion = "0.4"
+highway = "1"
+
+[[bench]]
+name = "implementation"
+harness = false
