--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-std = ["multiversion/std"]
-default = ["std"]
+multiversion = ["dep:multiversion"]
+default = ["multiversion"]
 
 [dependencies]
-multiversion = { version = "0.7", default-features = false }
+multiversion = { version = "0.7", optional = true }
 bytemuck = { version = "1", default-features = false, features = ["nightly_portable_simd"] }
 
 [dev-dependencies]
