--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 name = "autobahn-hash"
 version = "0.1.0"
+authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
+license = "MIT OR Apache-2.0"
+description = "An implementation of HighwayHash, a fast and strong SIMD hash function"
+repository = "https://github.com/calebzulawski/autobahn-hash"
+categories = ["algorithms", "no-std", "wasm"]
+readme = "README.md"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,7 +21,7 @@ multiversion = { version = "0.7", optional = true }
 bytemuck = { version = "1", default-features = false, features = ["nightly_portable_simd"] }
 
 [dev-dependencies]
-criterion = { version = "0.4", default-features = false, features = ["html_reports"] }
+criterion = { version = "0.4", default-features = false }
 highway = "1"
 
 [package.metadata.docs.rs]
